.provarCaches/00D5f000005vwGkEAI/objects/rstk__process_locadd__c.object
<CustomObject>
    <description>process_locadd__c: Used for API/CSV for stock location add</description>
    <fields>
        <fullName>rstk__acctgdateovr__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Accounting Date Override</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__actucstfrght__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Unit Cost for Freight</inlineHelpText>
        <label>Unit Cost, Freight</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Labor Unit Cost</inlineHelpText>
        <label>Unit Cost, Labor</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Material Unit Cost</inlineHelpText>
        <label>Unit Cost, Material</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstohdfrng__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Fringe Overhead Unit Cost</inlineHelpText>
        <label>Unit Cost, Fringe Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstohdlab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Labor Overhead Unit Cost</inlineHelpText>
        <label>Unit Cost, Labor Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstohdmach__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Machine Overhead Unit Cost</inlineHelpText>
        <label>Unit Cost, Mach Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstohdmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Material Overhead Unit Cost</inlineHelpText>
        <label>Unit Cost, Mtl Ohd</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstothlnd__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Landed Unit Cost</inlineHelpText>
        <label>Unit Cost, Landing</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstsublab__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Subcontracted Labor Unit Cost</inlineHelpText>
        <label>Unit Cost, Sub Lab</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__actucstsubmtl__c</fullName>
        <defaultValue>0</defaultValue>
        <inlineHelpText>Subcontracted Material Unit Cost</inlineHelpText>
        <label>Unit Cost, Sub Mtl</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__adjclracct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Adjustment Account</label>
        <referenceTo>rstk__syacc__c</referenceTo>
        <relationshipLabel>Process Loc Adds</relationshipLabel>
        <relationshipName>Process_Loc_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__comments__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Comments</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__docno__c</fullName>
        <inlineHelpText>Document Identification</inlineHelpText>
        <label>Document</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__icitem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Inventory Item</inlineHelpText>
        <label>Item</label>
        <referenceTo>rstk__icitem__c</referenceTo>
        <relationshipLabel>Process Loc Adds</relationshipLabel>
        <relationshipName>Process_Loc_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__import_error__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Import Error</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__import_errorstack__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Import Error Stack</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__import_msg__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Import Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__import_success__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Import Success</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__locid__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Stock Location ID</inlineHelpText>
        <label>Stock Loc ID</label>
        <referenceTo>rstk__sylocid__c</referenceTo>
        <relationshipLabel>Process Loc Adds</relationshipLabel>
        <relationshipName>Process_Loc_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__locnum__c</fullName>
        <inlineHelpText>Stock Location Number</inlineHelpText>
        <label>Stock Loc No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__lotexpiredate__c</fullName>
        <description>For Lot tracked Items, user-defined Expiration Date that is to be applied to Inventory By Lot Number resulting record. It can be left empty, and then shelf-life defined on Inventory Item Master &gt; Misc CC Override tab. Alternatively, if &apos;Expiration Date is Required&apos; is set (also on Inventory Item Master), then an Expiration Date must be set and date value should be greater than the date when the transaction is processed.</description>
        <inlineHelpText>For Lot Control Items, user-defined Exp Date to be applied to Inv By Lot # resulting record. It can be empty &amp; then shelf-life defined by Inv Item Master &gt; Misc CC Override tab. See page help for more info.</inlineHelpText>
        <label>Lot Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>rstk__lotno__c</fullName>
        <inlineHelpText>Lot Number</inlineHelpText>
        <label>Lot No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__proj__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Project</label>
        <referenceTo>rstk__pjproj__c</referenceTo>
        <relationshipLabel>Process Loc Adds</relationshipLabel>
        <relationshipName>Process_Loc_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__qty__c</fullName>
        <inlineHelpText>Quantity of this Item</inlineHelpText>
        <label>Quantity</label>
        <precision>16</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__selected__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Selected</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rstk__site__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Site</label>
        <referenceTo>rstk__sysite__c</referenceTo>
        <relationshipLabel>Process Loc Adds</relationshipLabel>
        <relationshipName>Process_Loc_Adds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__srlno__c</fullName>
        <inlineHelpText>Serial Number</inlineHelpText>
        <label>Serial No</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__srlnos__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Serial Nos</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Process Loc Add</label>
    <nameField>
        <label>Process Loc Add Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Process Loc Adds</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>